--- a/Kustaway/src/main/res/layout/activity_scale_image.xml
+++ b/Kustaway/src/main/res/layout/activity_scale_image.xml
@@ -14,7 +14,6 @@
         android:layout_width="128dp"
         android:layout_gravity="bottom|center"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        app:radius="4dp"/>
+        android:padding="10dp"/>
 
 </FrameLayout>
