--- a/Kustaway/src/main/res/values-v14/styles.xml
+++ b/Kustaway/src/main/res/values-v14/styles.xml
@@ -5,15 +5,16 @@
         AppBaseTheme from BOTH res/values/styles.xml and
         res/values-v11/styles.xml on API 14+ devices.
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Holo">
+
+    <style name="AppBaseTheme" parent="Theme.AppCompat.Light">
         <!-- API 14 theme customizations can go here. -->
     </style>
 
-    <style name="BlackBaseTheme" parent="android:Theme.Holo">
+    <style name="BlackBaseTheme" parent="Theme.AppCompat">
         <!-- API 14 theme customizations can go here. -->
     </style>
 
-    <style name="WhiteBaseTheme" parent="android:Theme.Holo.Light">
+    <style name="WhiteBaseTheme" parent="Theme.AppCompat.Light">
         <!-- API 14 theme customizations can go here. -->
     </style>
 
