--- a/Kustaway/src/main/res/values/styles.xml
+++ b/Kustaway/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
+    <style name="AppBaseTheme" parent="Theme.AppCompat.Light">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
@@ -59,7 +59,12 @@
 
     <drawable name="translucent_background">#99000000</drawable>
 
-    <style name="Theme.MyTrans" parent="android:style/Theme.Translucent">
+    <style name="Theme.MyTrans" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation</item>
+
         <item name="android:windowBackground">@drawable/translucent_background</item>
     </style>
 </resources>
