--- a/Kustaway/src/main/res/layout/activity_profile.xml
+++ b/Kustaway/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <variable name="viewModel" type="net.amay077.kustaway.viewmodel.ProfileViewModel" />
+        <variable name="viewModel" type="net.amay077.kustaway.viewmodel.ProfileActivityViewModel" />
     </data>
 
     <LinearLayout
