--- a/Kustaway/src/main/res/layout/activity_user_search.xml
+++ b/Kustaway/src/main/res/layout/activity_user_search.xml
@@ -1,41 +1,45 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              android:background="?attr/holo_background">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:orientation="vertical"
+                  android:background="?attr/holo_background">
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/menu_background">
-
-        <net.amay077.kustaway.widget.ClearEditText
-            android:layout_width="0dp"
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="?attr/menu_background">
+
+            <net.amay077.kustaway.widget.ClearEditText
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:singleLine="true"
+                android:id="@+id/search_text"/>
+
+            <net.amay077.kustaway.widget.FontelloButton
+                android:id="@+id/search"
+                android:layout_width="58dp"
+                android:layout_height="wrap_content"
+                android:background="?attr/button_stateful"
+                android:text="@string/fontello_search"/>
+
+        </LinearLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_height="0dp"
+            android:layout_width="match_parent"
             android:layout_weight="1"
-            android:singleLine="true"
-            android:id="@+id/search_text"/>
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
 
-        <net.amay077.kustaway.widget.FontelloButton
-            android:id="@+id/search"
-            android:layout_width="58dp"
+
+        <ProgressBar
+            android:id="@+id/guruguru"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/button_stateful"
-            android:text="@string/fontello_search"/>
-
+            android:gravity="center"
+            android:visibility="gone"/>
     </LinearLayout>
-
-    <ListView
-        android:id="@+id/list_view"
-        android:layout_height="0dp"
-        android:layout_width="match_parent"
-        android:layout_weight="1"/>
-
-    <ProgressBar
-        android:id="@+id/guruguru"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:visibility="gone"/>
-</LinearLayout>
+</layout>
