--- a/Kustaway/src/main/res/layout/row_word.xml
+++ b/Kustaway/src/main/res/layout/row_word.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- TODO 全て RecyleView 化したら消す-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="?android:attr/listPreferredItemHeight"
