--- a/Kustaway/src/main/res/layout/fragment_recycler_retweeters.xml
+++ b/Kustaway/src/main/res/layout/fragment_recycler_retweeters.xml
@@ -9,7 +9,8 @@
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
         <ProgressBar
             android:id="@+id/guruguru"
