--- a/Kustaway/src/main/res/layout/list_guruguru.xml
+++ b/Kustaway/src/main/res/layout/list_guruguru.xml
@@ -13,7 +13,8 @@
             android:layout_height="0dp"
             android:layout_width="match_parent"
             android:layout_weight="1"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
         <ListView
             android:id="@+id/list_view"
