--- a/Kustaway/src/main/res/layout/recycler_list.xml
+++ b/Kustaway/src/main/res/layout/recycler_list.xml
@@ -9,6 +9,7 @@
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
     </RelativeLayout>
 </layout>
