--- a/Kustaway/src/main/res/layout/fragment_profile_summary.xml
+++ b/Kustaway/src/main/res/layout/fragment_profile_summary.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_marginTop="10dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:contentDescription="@string/description_icon"
+        tools:src="@drawable/ic_launcher"/>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:gravity="center"
         android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/icon"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:contentDescription="@string/description_icon"
-            tools:src="@drawable/ic_launcher"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -94,4 +96,4 @@
         android:paddingRight="16dp"
         android:textSize="14sp"
         tools:text="@string/button_unfollow"/>
-</FrameLayout>
+</LinearLayout>
