--- a/Kustaway/src/main/res/layout/activity_scale_image.xml
+++ b/Kustaway/src/main/res/layout/activity_scale_image.xml
@@ -6,8 +6,16 @@
 
     <net.amay077.kustaway.widget.ScaleImageViewPager
         android:id="@+id/pager"
+        android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <!--Activity Transition 用の画像表示 -->
+    <ImageView
+        android:id="@+id/transitionImage"
+        android:visibility="visible"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <com.viewpagerindicator.CirclePageIndicator
         android:id="@+id/symbol"
