--- a/Kustaway/src/main/res/layout/pull_to_refresh_list2.xml
+++ b/Kustaway/src/main/res/layout/pull_to_refresh_list2.xml
@@ -14,7 +14,7 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_view"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:layout_height="0dp"
                 android:layout_width="match_parent"
                 android:layout_weight="1"
