--- a/Kustaway/src/main/res/layout/row_auto_complete.xml
+++ b/Kustaway/src/main/res/layout/row_auto_complete.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:foreground="?android:attr/selectableItemBackground"
                 android:layout_height="?android:attr/listPreferredItemHeight"
                 android:padding="8dp">
 
