--- a/Kustaway/src/main/res/layout/row_switch_account.xml
+++ b/Kustaway/src/main/res/layout/row_switch_account.xml
@@ -3,6 +3,7 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="?android:attr/listPreferredItemHeight"
+                android:foreground="?android:attr/selectableItemBackground"
                 android:padding="8dp">
 
     <ImageView
