--- a/Kustaway/src/main/res/layout/row_user_list.xml
+++ b/Kustaway/src/main/res/layout/row_user_list.xml
@@ -4,6 +4,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:foreground="?android:attr/selectableItemBackground"
         android:paddingBottom="3dp"
         android:paddingLeft="6dp"
         android:paddingRight="7dp"
