--- a/Kustaway/src/main/res/layout/row_word.xml
+++ b/Kustaway/src/main/res/layout/row_word.xml
@@ -3,6 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="?android:attr/listPreferredItemHeight"
+              android:foreground="?android:attr/selectableItemBackground"
               android:baselineAligned="false"
               android:orientation="horizontal"
               android:padding="8dp">
