--- a/Kustaway/src/main/res/layout/pull_to_refresh_list2.xml
+++ b/Kustaway/src/main/res/layout/pull_to_refresh_list2.xml
@@ -18,6 +18,7 @@
                 android:layout_height="0dp"
                 android:layout_width="match_parent"
                 android:layout_weight="1"
+                android:scrollbars="vertical"
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
