リップルエフェクトつけた

--- a/Kustaway/src/main/res/layout/row_account.xml
+++ b/Kustaway/src/main/res/layout/row_account.xml
@@ -6,6 +6,7 @@
               android:baselineAligned="false"
               android:orientation="horizontal"
               android:foreground="?android:attr/selectableItemBackground"
+              android:background="?android:attr/selectableItemBackground"
               tools:ignore="UseCompoundDrawables">
 
     <ImageView
