--- a/Kustaway/src/main/res/layout/row_switch_account.xml
+++ b/Kustaway/src/main/res/layout/row_switch_account.xml
@@ -4,6 +4,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?android:attr/listPreferredItemHeight"
                 android:foreground="?android:attr/selectableItemBackground"
+                android:background="?android:attr/selectableItemBackground"
                 android:padding="8dp">
 
     <ImageView
