--- a/Kustaway/src/main/res/layout/row_tweet.xml
+++ b/Kustaway/src/main/res/layout/row_tweet.xml
@@ -9,6 +9,7 @@
         android:paddingRight="7dp"
         android:paddingTop="4dp"
         android:foreground="?android:attr/selectableItemBackground"
+        android:background="?android:attr/selectableItemBackground"
         tools:layout_height="wrap_content">
 
         <RelativeLayout
