--- a/Kustaway/src/main/res/layout/row_auto_complete.xml
+++ b/Kustaway/src/main/res/layout/row_auto_complete.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:foreground="?android:attr/selectableItemBackground"
+    android:background="?android:attr/selectableItemBackground"
                 android:layout_height="?android:attr/listPreferredItemHeight"
                 android:padding="8dp">
 
