--- a/Kustaway/src/main/res/layout/row_subscribe_user_list.xml
+++ b/Kustaway/src/main/res/layout/row_subscribe_user_list.xml
@@ -7,6 +7,7 @@
               android:orientation="horizontal"
               android:paddingLeft="6dp"
               android:foreground="?android:attr/selectableItemBackground"
+              android:background="?android:attr/selectableItemBackground"
               tools:layout_height="wrap_content">
 
     <CheckBox
