--- a/Kustaway/src/main/res/layout/row_user.xml
+++ b/Kustaway/src/main/res/layout/row_user.xml
@@ -6,6 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:foreground="?android:attr/selectableItemBackground"
+        android:background="?android:attr/selectableItemBackground"
         android:paddingBottom="3dp"
         android:paddingLeft="6dp"
         android:paddingRight="7dp"
