--- a/Kustaway/src/main/res/layout/row_word.xml
+++ b/Kustaway/src/main/res/layout/row_word.xml
@@ -4,6 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="?android:attr/listPreferredItemHeight"
               android:foreground="?android:attr/selectableItemBackground"
+              android:background="?android:attr/selectableItemBackground"
               android:baselineAligned="false"
               android:orientation="horizontal"
               android:padding="8dp">
