--- a/Kustaway/src/main/res/layout/pull_to_refresh_list2.xml
+++ b/Kustaway/src/main/res/layout/pull_to_refresh_list2.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/ptr_layout"
         android:layout_width="match_parent"
@@ -26,6 +27,8 @@
                 android:id="@+id/guruguru"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                tools:visibility="gone"
+                android:visibility="gone"
                 android:gravity="center"/>
         </LinearLayout>
     </android.support.v4.widget.SwipeRefreshLayout>
