--- a/Kustaway/src/main/res/layout/activity_scale_image.xml
+++ b/Kustaway/src/main/res/layout/activity_scale_image.xml
@@ -1,27 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <FrameLayout
+        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <net.amay077.kustaway.widget.ScaleImageViewPager
-        android:id="@+id/pager"
-        android:visibility="invisible"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        <net.amay077.kustaway.widget.ScaleImageViewPager
+            android:id="@+id/pager"
+            android:visibility="invisible"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
-    <!--Activity Transition 用の画像表示 -->
-    <ImageView
-        android:id="@+id/transitionImage"
-        android:visibility="visible"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        <!--Activity Transition 用の画像表示 -->
+        <ImageView
+            android:id="@+id/transitionImage"
+            android:visibility="visible"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-    <com.viewpagerindicator.CirclePageIndicator
-        android:id="@+id/symbol"
-        android:layout_width="128dp"
-        android:layout_gravity="bottom|center"
-        android:layout_height="wrap_content"
-        android:padding="10dp"/>
+        <com.viewpagerindicator.CirclePageIndicator
+            android:id="@+id/symbol"
+            android:layout_width="128dp"
+            android:layout_gravity="bottom|center"
+            android:layout_height="wrap_content"
+            android:padding="10dp"/>
 
-</FrameLayout>
+    </FrameLayout>
+</layout>
